envoy/envoy.yaml
# overload_manager:
#   buffer_factory_config:
#     minimum_account_to_track_power_of_two: 20
#   actions:
#     name: "envoy.overload_actions.reset_high_memory_stream"
#     triggers:
#       - name: "envoy.resource_monitors.fixed_heap"
#         scaled:
#           scaling_threshold: 0.85
#           saturation_threshold: 0.95
admin:
  address:
    socket_address: { protocol: TCP, address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { protocol: TCP, address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/c" }
                route: { prefix_rewrite: "/coffee", cluster: coffee_service }
              - match: { prefix: "/t" }
                route: { prefix_rewrite: "/tea", cluster: tea_service }
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  
  - name: listener_1
    address:
      socket_address: { protocol: TCP, address: 0.0.0.0, port_value: 10001 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/c" }
                route: { prefix_rewrite: "/coffee", cluster: secure_coffee_service }
              - match: { prefix: "/t" }
                route: { prefix_rewrite: "/tea", cluster: tea_service }
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain: {filename: "/etc/ssl/certs/https.crt"}
              private_key: {filename: "/etc/ssl/certs/key.pem"}

  clusters:
  - name: coffee_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: coffee_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: coffeeapi
                port_value: 80

  - name: secure_coffee_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: secure_coffee_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: coffeeapi
                port_value: 443
    transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: localhost

  - name: tea_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: tea_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: teaapi
                port_value: 80
